--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,12 @@
+$black: #222222;
+$white: #ffffff;
+$main-blue: #1c74bc;
+$yellow: #fdd929;
+$grey: #898989;
+$bg-footer: #eff5fa;
 
-$green: #0fda20;
+$mobile: 375px;
+$tablet: 768px;
+$desktop: 1440px;
 
-.variables{
-    color: $green;
-}
+$btn-border-radius: 8px;
