add house section

--- a/assets/styles/template-styles/home.css
+++ b/assets/styles/template-styles/home.css
@@ -1,1 +1,1 @@
-.home{color:#898989}
+.house{padding:174px 16px;margin-left:-16px;margin-right:-16px;text-align:center;background-color:#c4c4c4;background-size:cover;background-position:center;background-image:url(../../images/main-bg-image.jpg)}@media(min-device-pixel-ratio: 2),(-webkit-min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx){.house{background-image:url(../../images/main-bg-image-2X.jpg)}}.house__title{margin:0;margin-bottom:32px;color:#fff;font-weight:600;line-height:1.3}
