--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,30 @@
 	}
 }
 
+.button {
+	width: 311px;
+	padding: 14px 0;
+	color: $white;
+	background-color: $main-blue;
+	cursor: pointer;
+	border: 1px solid transparent;
+	font-family: inherit;
+	font-weight: 500;
+	line-height: auto;
+	border-radius: 8px;
+	transition: color $transition-function, background-color $transition-function,
+		box-shadow $transition-function;
+
+	&:hover,
+	&:focus {
+		color: $main-blue;
+		background-color: $white;
+		border: 1px solid $main-blue;
+		box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+			0px 2px 2px rgba(0, 0, 0, 0.12);
+	}
+}
+
 .visually-hidden {
 	position: absolute;
 	white-space: nowrap;
