--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -4,6 +4,7 @@
 	padding: 174px 16px;
 	margin-left: -16px;
 	margin-right: -16px;
+	margin-bottom: 64px;
 	text-align: center;
 	background-color: #c4c4c4;
 	background-size: cover;
@@ -22,4 +23,46 @@
 	color: $white;
 	font-weight: 600;
 	line-height: 1.3;
+}
+
+.support {
+	margin-bottom: 64px;
+}
+
+.support__title {
+	margin: 0;
+	margin-bottom: 32px;
+	color: $black;
+	font-weight: 500;
+	line-height: 1.3;
+}
+
+.support__list {
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+
+.support__count {
+	margin: 0 auto;
+	margin-bottom: 24px;
+	padding-top: 45px;
+	width: 140px;
+	height: 140px;
+	color: $black;
+	font-size: 42px;
+	font-weight: 500;
+	line-height: 1;
+	text-align: center;
+	border: 2px solid $yellow;
+	border-radius: 100%;
+}
+
+.support__text {
+	margin: 0 auto;
+	color: $black;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 1.4;
+	text-align: center;
 }
