--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -66,3 +66,30 @@
 	line-height: 1.4;
 	text-align: center;
 }
+
+.about__title {
+	margin: 0;
+	margin-bottom: 40px;
+	color: $black;
+	font-size: 28px;
+	font-weight: 500;
+	line-height: auto;
+}
+
+.about__text {
+	margin: 0;
+	margin-bottom: 48px;
+	color: $black;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 1.4;
+}
+
+.about__img-wrap {
+	width: 100%;
+	margin: 0 auto;
+
+	@media screen and (min-width: $mobile) {
+		width: 343px;
+	}
+}
