--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -455,28 +455,28 @@ table {
 
 /* Links
 --------------------------------------------- */
-a {
-	color: #4169e1;
-}
+// a {
+// 	color: #4169e1;
+// }
 
-a:visited {
-	color: #800080;
-}
+// a:visited {
+// 	color: #800080;
+// }
 
-a:hover,
-a:focus,
-a:active {
-	color: #191970;
-}
+// a:hover,
+// a:focus,
+// a:active {
+// 	color: #191970;
+// }
 
-a:focus {
-	outline: thin dotted;
-}
+// a:focus {
+// 	outline: thin dotted;
+// }
 
-a:hover,
-a:active {
-	outline: 0;
-}
+// a:hover,
+// a:active {
+// 	outline: 0;
+// }
 
 /* Forms
 --------------------------------------------- */
