--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -67,6 +67,10 @@
 	text-align: center;
 }
 
+.about {
+	margin-bottom: 64px;
+}
+
 .about__title {
 	margin: 0;
 	margin-bottom: 40px;
@@ -92,4 +96,8 @@
 	@media screen and (min-width: $mobile) {
 		width: 343px;
 	}
+}
+
+.swiper-container {
+	margin-bottom: 30px;
 }
