--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -101,3 +101,53 @@
 .swiper-container {
 	margin-bottom: 30px;
 }
+
+.news {
+	margin-bottom: 64px;
+}
+
+.news__title {
+	margin: 0;
+	margin-bottom: 32px;
+	color: $black;
+	font-size: 28px;
+	font-weight: 500;
+	line-height: auto;
+}
+
+.news__wraper {
+	display: flex;
+	justify-content: space-between;
+}
+
+.news__text {
+	margin: 0;
+	margin-top: 18px;
+	margin-bottom: 12px;
+	color: $grey;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.35;
+}
+
+.news__subTitle {
+	margin: 0;
+	margin-bottom: 32px;
+	color: $black;
+	font-size: 18px;
+	font-weight: 500;
+	line-height: 1.4;
+}
+
+.bank-details {
+	margin-bottom: 64px;
+}
+
+.bank-details__title {
+	margin: 0;
+	margin-bottom: 32px;
+	color: $black;
+	font-size: 28px;
+	font-weight: 500;
+	line-height: auto;
+}
