--- a/src/styles/template-parts-styles/founding-documents.scss
+++ b/src/styles/template-parts-styles/founding-documents.scss
@@ -4,7 +4,19 @@
 	margin-left: -16px;
 	margin-right: -16px;
 	padding: 32px 16px 40px 16px;
-	background-color: $main-blue;
+	background: $main-blue;
+
+	@media screen and (min-width: $tablet) {
+		margin-left: -40px;
+		margin-right: -40px;
+		padding: 40px 40px 60px 40px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-right: -75px;
+		margin-left: -75px;
+		padding: 48px 75px 64px 75px;
+	}
 }
 
 .documents__title {
@@ -14,6 +26,32 @@
 	font-size: 28px;
 	font-weight: 500;
 	line-height: auto;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 40px;
+		font-size: 32px;
+		line-height: 1;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 56px;
+		font-size: 40px;
+	}
+}
+
+.documents__list {
+	@media screen and (min-width: $tablet) {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+
+	@media screen and (min-width: $desktop) {
+		display: flex;
+		gap: 120px;
+		justify-content: space-between;
+		padding-right: 70px;
+		padding-left: 70px;
+	}
 }
 
 .documents__wraper {
@@ -23,11 +61,38 @@
 	margin-bottom: 32px;
 	transition: color $transition-function;
 
+	@media screen and (min-width: $tablet) {
+		position: relative;
+		margin-left: 60px;
+	}
+
 	&:hover,
 	&:focus {
 		.documents__subtitle {
 			color: $yellow;
+
+			@media screen and (min-width: $tablet) {
+				color: $main-blue;
+			}
 		}
+	}
+}
+
+.documents__img {
+	display: block;
+
+	@media screen and (min-width: $tablet) {
+		display: none;
+	}
+}
+
+.documents__img-desktop {
+	display: none;
+
+	@media screen and (min-width: $tablet) {
+		display: block;
+		width: 243px;
+		height: 320px;
 	}
 }
 
@@ -37,6 +102,21 @@
 	font-size: 18px;
 	font-weight: 500;
 	line-height: 1.4;
+
+	@media screen and (min-width: $tablet) {
+		position: absolute;
+		width: 211px;
+		left: 16px;
+		bottom: 20px;
+		color: $black;
+		font-size: 16px;
+		font-weight: 500;
+		line-height: 1.3;
+	}
+
+	@media screen and (min-width: $desktop) {
+		max-width: 172px;
+	}
 }
 
 .documents__text {
@@ -46,4 +126,41 @@
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 1.4;
+
+	@media screen and (min-width: $tablet) {
+		margin-right: auto;
+		margin-left: auto;
+
+		text-align: center;
+		font-weight: 600;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-top: 26px;
+
+		font-size: 20px;
+	}
+}
+
+.documents__text-bottom {
+	margin: 0;
+	margin-top: 17px;
+	color: $white;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 1.4;
+
+	@media screen and (min-width: $tablet) {
+		margin: 0;
+		margin-right: auto;
+		margin-left: auto;
+		width: 691px;
+		text-align: center;
+		font-weight: 600;
+	}
+
+	@media screen and (min-width: $desktop) {
+		width: 850px;
+		font-size: 20px;
+	}
 }
