--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,6 +20,7 @@
 	cursor: pointer;
 	border: 1px solid transparent;
 	font-family: inherit;
+	font-size: 20px;
 	font-weight: 500;
 	line-height: auto;
 	border-radius: 8px;
