--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -15,6 +15,25 @@
 	@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
 		background-image: url(../../images/main-bg-image-2X.jpg);
 	}
+
+	@media screen and (min-width: $tablet) {
+		padding: 125px 55px;
+		margin-left: 0;
+		margin-right: 0;
+		margin-bottom: 80px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		padding: 272px 240px;
+		margin-bottom: 117px;
+	}
+}
+
+.house__title-wraper {
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		justify-content: center;
+	}
 }
 
 .house__title {
@@ -23,24 +42,112 @@
 	color: $white;
 	font-weight: 600;
 	line-height: 1.3;
+
+	@media screen and (min-width: $tablet) {
+		width: 580px;
+		margin-bottom: 48px;
+		font-size: 40px;
+		line-height: 1.4;
+	}
+
+	@media screen and (min-width: $desktop) {
+		width: 810px;
+		font-size: 48px;
+	}
+}
+
+.house__button {
+	@media screen and (min-width: $tablet) {
+		width: 332px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 14px 0;
+		font-size: 16px;
+		font-weight: 500;
+		line-height: 1;
+	}
+
+	@media screen and (min-width: $desktop) {
+		width: 322px;
+		font-size: 24px;
+		line-height: auto;
+	}
+}
+
+.house__span {
+	display: none;
+
+	@media screen and (min-width: $tablet) {
+		display: block;
+		margin-left: 6px;
+	}
 }
 
 .support {
 	margin-bottom: 64px;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 80px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 117px;
+	}
 }
 
 .support__title {
 	margin: 0;
 	margin-bottom: 32px;
 	color: $black;
+	font-size: 28px;
 	font-weight: 500;
 	line-height: 1.3;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 40px;
+		font-size: 32px;
+		line-height: 1;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 56px;
+		font-size: 40px;
+		line-height: auto;
+	}
 }
 
 .support__list {
 	display: flex;
 	flex-direction: column;
 	gap: 40px;
+
+	@media screen and (min-width: $tablet) {
+		flex-direction: row;
+		flex-wrap: wrap;
+		flex-basis: 200px;
+		gap: 24px;
+		justify-content: space-between;
+	}
+
+	@media screen and (min-width: $desktop) {
+		flex-basis: 350px;
+		gap: 56px;
+		padding-right: 64px;
+		padding-left: 64px;
+	}
+}
+
+.support__item {
+	@media screen and (min-width: $tablet) {
+		width: 200px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		width: 350px;
+	}
 }
 
 .support__count {
@@ -56,6 +163,15 @@
 	text-align: center;
 	border: 2px solid $yellow;
 	border-radius: 100%;
+
+	@media screen and (min-width: $tablet) {
+		font-size: 36px;
+		font-weight: 600;
+	}
+
+	@media screen and (min-width: $desktop) {
+		font-size: 42px;
+	}
 }
 
 .support__text {
@@ -65,6 +181,15 @@
 	font-weight: 400;
 	line-height: 1.4;
 	text-align: center;
+
+	@media screen and (min-width: $tablet) {
+		font-size: 16px;
+		line-height: 1.3;
+	}
+
+	@media screen and (min-width: $desktop) {
+		font-size: 18px;
+	}
 }
 
 .about {
@@ -100,11 +225,25 @@
 
 .swiper-container {
 	margin-bottom: 30px;
+
+	@media screen and (min-width: $tablet) {
+		display: none;
+	}
 }
 
 .news {
 	margin-top: 64px;
 	margin-bottom: 64px;
+
+	@media screen and (min-width: $tablet) {
+		margin-top: 80px;
+		margin-bottom: 56px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-top: 117px;
+		margin-bottom: 117px;
+	}
 }
 
 .news__title {
@@ -114,11 +253,45 @@
 	font-size: 28px;
 	font-weight: 500;
 	line-height: auto;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 24px;
+		font-size: 32px;
+		line-height: 1;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 56px;
+		font-size: 40px;
+		line-height: auto;
+	}
 }
 
 .news__wraper {
 	display: flex;
 	justify-content: space-between;
+}
+
+.news__gallery {
+	display: none;
+
+	@media screen and (min-width: $tablet) {
+		display: block;
+	}
+
+	@media screen and (min-width: $desktop) {
+		display: flex;
+		gap: 30px;
+	}
+}
+
+.news__flexWraper {
+	display: flex;
+	gap: 24px;
+
+	@media screen and (min-width: $desktop) {
+		gap: 30px;
+	}
 }
 
 .news__text {
@@ -138,10 +311,24 @@
 	font-size: 18px;
 	font-weight: 500;
 	line-height: 1.4;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 24px;
+		font-size: 16px;
+		line-height: 1.35;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-bottom: 0;
+	}
 }
 
 .bank-details {
 	margin-bottom: 64px;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 80px;
+	}
 }
 
 .bank-details__title {
@@ -151,6 +338,12 @@
 	font-size: 28px;
 	font-weight: 500;
 	line-height: auto;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 24px;
+		font-size: 32px;
+		line-height: 1;
+	}
 }
 
 .tabs {
