--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -391,12 +391,48 @@
 	border-bottom: 1px solid $main-blue;
 	border-bottom-right-radius: 8px;
 	border-bottom-left-radius: 8px;
+
+	@media screen and (min-width: $tablet) {
+		padding-left: 24px;
+		padding-right: 24px;
+	}
+}
+.tabs__flexWraper {
+	margin-top: -51px;
+
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		justify-content: space-between;
+		gap: 128px;
+	}
+}
+.tabs__textWraper {
+	@media screen and (min-width: $tablet) {
+		display: flex;
+		gap: 8px;
+	}
 }
 .tabs__wraper-img {
 	display: flex;
 	justify-content: center;
 	margin-top: -51px;
 	margin-bottom: 40px;
+
+	@media screen and (min-width: $tablet) {
+		margin-bottom: 60px;
+	}
+}
+.tabs-img {
+	@media screen and (min-width: $tablet) {
+		width: 130px;
+		height: 140px;
+	}
+}
+
+.tabs-button {
+	@media screen and (min-width: $tablet) {
+		width: 332px;
+	}
 }
 
 .bank-details__text-first {
@@ -406,6 +442,15 @@
 	font-size: 18px;
 	font-weight: 600;
 	line-height: auto;
+
+	@media screen and (max-width: $mobile) {
+		margin-top: -20px;
+	}
+
+	@media screen and (min-width: $tablet) {
+		font-size: 16px;
+		line-height: 1;
+	}
 }
 
 .bank-details__text-second {
@@ -419,5 +464,10 @@
 	@media screen and (max-width: $mobile) {
 		font-size: 17px;
 		letter-spacing: -0.05em;
+	}
+
+	@media screen and (min-width: $tablet) {
+		font-size: 16px;
+		line-height: 1;
 	}
 }
