--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -336,11 +336,12 @@ input,
 select,
 optgroup,
 textarea {
-	color: #404040;
+	color: $black;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell,
 		"Helvetica Neue", sans-serif;
-	font-size: 1rem;
-	line-height: 1.5;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 1.35;
 }
 
 h1,
