--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,278 +1,279 @@
 img {
-    display: block;
+  display: block;
 }
 
 a,
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .header {
-    padding: 16px 0;
+  padding: 16px 0;
 
-    @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $tablet) {
     padding: 24px 0;
-    }
+  }
 }
 
 // Logo
-.custom-logo-link{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.custom-logo-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .custom-logo-link img {
-    width: 174px;
-    height: 40px;
-    
-    @media screen and (min-width: $desktop) {
-        width: 200px;
-        height: 46px;
-    }
+  width: 174px;
+  height: 40px;
+
+  @media screen and (min-width: $desktop) {
+    width: 200px;
+    height: 46px;
+  }
 }
 
 // header menu
 .menu__nav,
 .buttons__wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.buttons__wrap {
+  margin-top: 47px;
+
+  @media screen and (min-width: $tablet) {
+    margin-top: 64px;
+  }
+
+  @media screen and (max-width: 1439px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-top: 0;
+  }
+}
+
+.menu__container {
+  @media screen and (max-width: 1439.98px) {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: transform $transition-function;
+  }
+  @media screen and (min-width: $desktop) {
     display: flex;
     align-items: center;
+  }
+}
+
+.menu__container.is-open {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.menu__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  position: absolute;
+  top: 73px;
+  width: 100%;
+  padding: 24px 16px 32px;
+  background: $white;
+
+  @media screen and (min-width: $mobile) and (max-width: 767px) {
+    left: 0;
+  }
+
+  @media screen and (min-width: $tablet) and (max-width: 1439px) {
+    padding: 24px 20px 40px;
+    border-radius: 8px;
+    top: 30px;
+    right: 40px;
+    width: 421px;
+    box-shadow: 0px 4px 25px 0px rgba(44, 44, 44, 0.2);
+  }
+
+  @media screen and (min-width: $desktop) {
+    position: static;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
-}
-
-.buttons__wrap{
-    margin-top: 47px;
-
-    @media screen and (min-width: $tablet) {
-        margin-top: 64px;
-        }
-
-    @media screen and (max-width: 1439px) {
-        width: 100%;
-    }
-
-    @media screen and (min-width: $desktop) {
-        margin-top: 0;
-    }
-}
-
-.menu__container{
-    @media screen and (max-width: 1439.98px) {
-        display: block;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        transform: translateX(100%);
-        transition: transform $transition-function;
-    }
-    @media screen and (min-width: $desktop) {
-        display: flex;
-        align-items: center;
-    }
-}
-
-.menu__container.is-open{
-    transform: translateX(0);
-    opacity: 1;
-}
-
-.menu__wrapper{
-            display: flex;
-            flex-direction: column;
-            align-items: start;
-            position: absolute;
-            top: 73px;
-            width: 100%;
-            padding: 24px 16px 32px;
-            background: $white;
-        
-            @media screen and (min-width: $mobile) and (max-width: 767px) {
-                left: 0;
-            }
-        
-            @media screen and (min-width: $tablet) and (max-width: 1439px) {
-                padding: 24px 20px 40px;
-                border-radius: 8px;
-                top: 30px;
-                right: 40px;
-                width: 421px;
-                box-shadow: 0px 4px 25px 0px rgba(44, 44, 44, 0.20);
-            }
-
-            @media screen and (min-width: $desktop) {
-                position: static;
-                flex-direction: row;
-                align-items: center;
-                justify-content: space-between;
-                padding: 0;
-            }
+    padding: 0;
+  }
 }
 
 .menu__wrapper ul {
-    @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $desktop) {
     margin-right: 56px;
-    }
+  }
 }
 
 // menu open&close buttons
 .menu-icon {
-    fill: $black;
-    transition: fill $transition-function;
-        &:hover,
-        &:focus{
-            fill: $main-blue;
-        }
+  fill: $black;
+  transition: fill $transition-function;
+  &:hover,
+  &:focus {
+    fill: $main-blue;
+  }
 }
 
 .menu-close__btn {
-    position: absolute;
-    top: 30px;
-    right: 16px;
+  position: absolute;
+  top: 30px;
+  right: 16px;
 }
 
-.menu-open__btn, .menu-close__btn {
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
+.menu-open__btn,
+.menu-close__btn {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
 
-    @media screen and (min-width: $desktop) {
-        display: none;
-    }
+  @media screen and (min-width: $desktop) {
+    display: none;
+  }
 }
 
 // menu items with wp-classes
 .menu-item a {
-    font-size: 20px;
-    line-height: normal;
-    transition: color $transition-function;
+  font-size: 20px;
+  line-height: normal;
+  transition: color $transition-function;
 
-    &:hover,
-    &:focus {
-        color: $main-blue;
-    }
+  &:hover,
+  &:focus {
+    color: $main-blue;
+  }
 
-    @media screen and (min-width: $desktop) {
-        font-size: 18px;
-    }
+  @media screen and (min-width: $desktop) {
+    font-size: 18px;
+  }
 }
 
 .menu-item a.current {
-    color: $main-blue;
+  color: $main-blue;
 }
 
 .menu-item:last-child {
-    @media screen and (min-width: $desktop) {
-        display: none;
-    }
+  @media screen and (min-width: $desktop) {
+    display: none;
+  }
 }
 
-.menu-item:not(:last-child){
-    margin-bottom: 40px;
-    @media screen and (min-width: $tablet) {
-        margin-bottom: 44px;
-    }
-    @media screen and (min-width: $desktop) {
-        margin-bottom: 0;
-    }
+.menu-item:not(:last-child) {
+  margin-bottom: 40px;
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 44px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 0;
+  }
 }
 
 .menu-item:not(:first-child) {
-    @media screen and (min-width: $desktop) {
-        margin-left: 48px;
-    }
+  @media screen and (min-width: $desktop) {
+    margin-left: 48px;
+  }
 }
 
-.header_list{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: start;
-    
-    @media screen and (min-width: $desktop) {
-        align-items: center;
-        flex-direction: row;
-    }
+.header_list {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: start;
+
+  @media screen and (min-width: $desktop) {
+    align-items: center;
+    flex-direction: row;
+  }
 }
 
 // social links
 ul.mob-menu__social {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-    @media screen and (min-width: $desktop) {
-        display: none;
-    }
+  @media screen and (min-width: $desktop) {
+    display: none;
+  }
 }
 
 .social__item:not(:last-child) {
-    margin-right: 24px;
+  margin-right: 24px;
 }
 
 .icon-socials {
-    fill: $main-blue;
+  fill: $main-blue;
 }
 
-// Yellow menu button
+// Help menu button
 .menu__btn {
-    display: inline-block;
-    padding: 14px 32px;
-    margin-bottom: 39px;
-    text-align: center;
-    background-color: $yellow;
-    border-radius: $btn-border-radius;
+  display: inline-block;
+  padding: 14px 32px;
+  margin-bottom: 39px;
+  text-align: center;
+  background-color: $yellow;
+  border-radius: $btn-border-radius;
 
-    color: $main-blue;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 1;
-    order: -1;
+  color: $main-blue;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1;
+  order: -1;
 
-    @media screen and (min-width: $tablet) {
-        margin-bottom: 32px;
-    }
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 32px;
+  }
 
-    @media screen and (min-width: $desktop) {
-        padding: 14px 24px;
-        margin-bottom: 0;
-        font-size: 16px;
-        order: initial;
-    }
+  @media screen and (min-width: $desktop) {
+    padding: 14px 24px;
+    margin-bottom: 0;
+    font-size: 16px;
+    order: initial;
+  }
 }
 
 // Language change buttons
 .lang__list {
-    display: flex;
-    font-size: 20px;
+  display: flex;
+  font-size: 20px;
 
-    @media screen and (min-width: $desktop) {
-        width: 60px;
-        font-size: 18px;
-    }
+  @media screen and (min-width: $desktop) {
+    width: 60px;
+    font-size: 18px;
+  }
 }
 
-.lang__item:not(:last-child){
-    margin-right: 24px;
-    
-    @media screen and (min-width: $tablet) {
-         margin-right: 32px;
-    }
-    
-    @media screen and (min-width: $desktop) {
-        margin-right: 12px;
-    }
+.lang__item:not(:last-child) {
+  margin-right: 24px;
+
+  @media screen and (min-width: $tablet) {
+    margin-right: 32px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-right: 12px;
+  }
 }
 
 .lang__btn {
-    padding: 0;
-    border: none;
-    font-family: inherit;
-    color: $grey;
-    background-color: transparent;
+  padding: 0;
+  border: none;
+  font-family: inherit;
+  color: $grey;
+  background-color: transparent;
 }
 
 .lang__btn.active {
-    color: $black;
+  color: $black;
 }
