--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -52,9 +52,11 @@
   font-weight: 600;
   @media screen and (min-width: $tablet) {
     line-height: 1;
+    text-align: center;
   }
   @media screen and (min-width: $desktop) {
     font-size: 32px;
+    text-align: left;
   }
 }
 
