helpform page is updated for wp

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -59,6 +59,7 @@ button {
   @media screen and (max-width: 1439.98px) {
     display: block;
     position: fixed;
+    z-index: 9;
     top: 0;
     left: 0;
     width: 100%;
