--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -123,6 +123,7 @@ textarea.contact__input {
 }
 
 .helpform-btn__wrap .helpform__button {
+  cursor: pointer;
   display: flex;
   width: 100%;
   padding: 14px 32px;
