--- a/src/styles/template-parts-styles/need-help-animals.scss
+++ b/src/styles/template-parts-styles/need-help-animals.scss
@@ -38,7 +38,7 @@
 
 	}
 
-    @media screen and (min-width: 1920px) {
+    @media screen and (min-width: $full) {
     background-image: url(../../images/need-help-hd.png);
     margin-top: 63px;
   }
