--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -319,8 +319,7 @@
 }
 
 .news__wraper {
-	display: flex;
-	justify-content: space-between;
+	width: 100%;
 }
 
 .news__gallery {
@@ -346,7 +345,8 @@
 }
 
 .news__text {
-	margin: 0;
+	display: flex;
+	justify-content: space-between;
 	margin-top: 18px;
 	margin-bottom: 12px;
 	color: $grey;
